outline der einleitung

--- a/da_piccolotto.tex
+++ b/da_piccolotto.tex
@@ -70,9 +70,34 @@
 
 \mainmatter
 
-\chapter{Content}
+\chapter{Einleitung}
+\label{chapter:einleitung}
 
-I like pie. And Görmän umlauts.
+% Hier kommt eine kurze Einführung von semantischen Daten, nehme ich an
+
+\section{Motivation}
+\label{section:motivation}
+
+% Hier wird generell eingeleitet, also vermutlich die Problematik zwischen semantischen Datensätzen und Endusern
+
+\section{Problemstellung und Zielsetzung}
+\label{section:problemstellung}
+
+% Hier wird quasi der Vizboard Workflow umrissen
+% und erklärt, wo das eigentliche Problem liegt, nämlich im Information Overload beim letzten Schritt
+
+\begin{figure}[htbp]
+	\centering
+	\includegraphics[width=0.75\textwidth]{images/vizboard_workflow.png}
+	\caption{VizBoard Workflow}
+	\label{figure:vizboard_workflow}
+\end{figure}
+
+\section{Aufbau der Arbeit}
+\label{section:aufbau}
+
+% Aufbau der Arbeit erklären, kommt zum Schluss
+
 
 %### end of appendix
 %#####################################################
