--- a/da_piccolotto.tex
+++ b/da_piccolotto.tex
@@ -98,6 +98,28 @@
 
 % Aufbau der Arbeit erklären, kommt zum Schluss
 
+\chapter{Stand der Forschung und Technik}
+\label{chapter:standderforschung}
+
+\section{Grundlagen}
+\label{section:grundlagen}
+
+\section{Szenario}
+\label{section:szenario}
+
+% Hier geht es ja um VizBoard. User wählt also im vorletzten Schritt, dem Facettenbrowser, geeignete Visualisierungskomponenten aus
+
+Wie in Kapitel~\ref{chapter:einleitung} erläutert, basiert 
+
+% Dann werden alle SO BÄM IN DIE FRESSE angezeigt, was problematisch ist
+
+% Der Benutzer ist laut unserem Rollenmodell weder Developer noch Visualisierungsexperte, d.h. er hat erstmal Schwierigkeiten zu erfassen, was hier überhaupt abgeht
+
+% Was sind das für Fenster? Welche Komponente ist welche? Welche macht was? Wie kann ich sie bedienen? HUUUPS da ändert sich ja was obwohl ich dort nix gemacht hab! Wie hängen die zusammen? Was sind das für Daten, die dargestellt werden? Was heißt GDP? Wie wird das berechnet? Was soll die Spitze bei 1990? Woher kommt die? Diese eine Komponente scheint kaputt zu sein, wo kann ich mich beschweren?
+
+\chapter{Konzept}
+
+\section{Anforderungsanalyse}
 
 %### end of appendix
 %#####################################################
