anfang vom szenario

--- a/da_piccolotto.tex
+++ b/da_piccolotto.tex
@@ -56,6 +56,8 @@
 \newacronym{XPath}{XPath}{XML Path Language}
 \newacronym{XHTML}{XHTML}{Extensible Hypertext Markup Language}
 \newacronym{XML}{XML}{Extensible Markup Language}
+% my acronyms
+\newacronym{InfoVis}{InfoVis}{Informationsvisualisierung}
 
 
 \begin{document}
@@ -107,13 +109,17 @@
 \section{Szenario}
 \label{section:szenario}
 
-% Hier geht es ja um VizBoard. User wählt also im vorletzten Schritt, dem Facettenbrowser, geeignete Visualisierungskomponenten aus
+% kurze einleitung noch mal
 
-Wie in Kapitel~\ref{chapter:einleitung} erläutert, basiert 
+Wie in Kapitel~\ref{chapter:einleitung} erläutert, ist das komposite InfoVis-System Teil der Anwendung VizBoard. Sie leitet den Benutzer in mehreren Schritten von der Auswahl eines Datensatzes zur finalen, kompositen Informationsvisualisierung. Im vorletzten Schritt wählt dieser mit Hilfe eines Facettenbrowsers geeignete Visualisierungskomponenten aus, welche danach angezeigt werden. Um die Problemstellung noch einmal zu verdeutlichen, wird im folgenden ein mögliches Szenario beschrieben.
 
-% Dann werden alle SO BÄM IN DIE FRESSE angezeigt, was problematisch ist
+% einführung der problemstellung
+Alice möchte für ihr Biologiestudium mehr über die geografische Verteilung verschiedener Genvarationen herausfinden. Dazu sucht sie im Internet nach einem Datensatz, welchen sie auch findet. Leider ist er in einem für Alice unbekannten Format abgespeichert, nämlich OWL. Außerdem ist er ca. 30\,MB groß, das ist zu viel um es manuell zu verarbeiten. Davon abgesehen sind geografische Breite und Länge als Zahlenkombination keine anschauliche Repräsentation von Orten. Alice hört von einem Freund, dass VizBoard gut geeignet ist um semantische Datensätze anzusehen und probiert es aus.
 
 % Der Benutzer ist laut unserem Rollenmodell weder Developer noch Visualisierungsexperte, d.h. er hat erstmal Schwierigkeiten zu erfassen, was hier überhaupt abgeht
+
+Nachdem Alice ihren Datensatz auch bei VizBoard gefunden und die gewünschten Visualisierungskomponenten (eine Karte, ein Balkendiagramm, eine Tabelle und eine Treemap) ausgewählt hat, werden diese ihr angezeigt. Alice benutzt VizBoard zum ersten Mal und macht außer Facebook und YouTube auch sonst nicht viel im Internet, das heißt sie ist zunächst von den vier unterschiedlichen Fenstern etwas überfordert.
+% lösungsansätze!
 
 % Was sind das für Fenster? Welche Komponente ist welche? Welche macht was? Wie kann ich sie bedienen? HUUUPS da ändert sich ja was obwohl ich dort nix gemacht hab! Wie hängen die zusammen? Was sind das für Daten, die dargestellt werden? Was heißt GDP? Wie wird das berechnet? Was soll die Spitze bei 1990? Woher kommt die? Diese eine Komponente scheint kaputt zu sein, wo kann ich mich beschweren?
 
