outline für grundlagen
semantische daten, informationsvisualisierung, software support

--- a/da_piccolotto.tex
+++ b/da_piccolotto.tex
@@ -105,6 +105,21 @@
 \section{Grundlagen}
 \label{section:grundlagen}
 
+\subsection{Semantische Daten}
+\label{section:semantische_daten}
+
+% Grundlagen von RDF, RDFS, OWL. Kann ich mehr oder weniger aus dem Beleg abschreiben.
+
+\subsection{Informationsvisualisierung}
+\label{section:informationsvisualisierung}
+
+% Grundlagen von InfoVis und Beispiele
+
+\subsection{Software Support}
+\label{section:software_support}
+
+% Konzepte für Hilfe in Software: Karl Klammer, F1, Foren, Handbücher, ...
+
 \section{Szenario}
 \label{section:szenario}
 
