neue struktur wie vorgeschlagen
email vom 16.5.

--- a/da_piccolotto.tex
+++ b/da_piccolotto.tex
@@ -71,16 +71,19 @@
 
 \mainmatter
 
+% ###################################################
 \chapter{Einleitung}
 \label{chapter:einleitung}
 
 % Hier kommt eine kurze Einführung von semantischen Daten, nehme ich an
 
+% ###################################################
 \section{Motivation}
 \label{section:motivation}
 
 % Hier wird generell eingeleitet, also vermutlich die Problematik zwischen semantischen Datensätzen und Endusern
 
+% ###################################################
 \section{Problemstellung und Zielsetzung}
 \label{section:problemstellung}
 
@@ -94,32 +97,17 @@
 	\label{figure:vizboard_workflow}
 \end{figure}
 
+% ###################################################
 \section{Aufbau der Arbeit}
 \label{section:aufbau}
 
 % Aufbau der Arbeit erklären, kommt zum Schluss
 
+% ###################################################
 \chapter{Stand der Forschung und Technik}
 \label{chapter:standderforschung}
 
-\section{Grundlagen}
-\label{section:grundlagen}
-
-\subsection{Semantische Daten}
-\label{section:semantische_daten}
-
-% Grundlagen von RDF, RDFS, OWL. Kann ich mehr oder weniger aus dem Beleg abschreiben.
-
-\subsection{Informationsvisualisierung}
-\label{section:informationsvisualisierung}
-
-% Grundlagen von InfoVis und Beispiele
-
-\subsection{Software Support}
-\label{section:software_support}
-
-% Konzepte für Hilfe in Software: Karl Klammer, F1, Foren, Handbücher, ...
-
+% ###################################################
 \section{Szenario}
 \label{section:szenario}
 
@@ -148,8 +136,7 @@ Damit bekommt Alice einen Überblick über die verfügbaren Visualisierungen und
 
 In der Tabelle findet sie auch eine Spalte \enquote{SNP}. Alice weiß zwar, dass sie die Abkürzung schon einmal gesehen hat, kennt aber im Moment ihre Bedeutung nicht. Praktischerweise ist der Spaltenkopf mit der Wikipedia verlinkt und sie wird sofort auf die entsprechende Seite weitergeleitet. Alice erinnert sich, dass \enquote{SNP} \enquote{Single-nucleotide polymorphism} bedeutet und sie bekommt auch gleich zusätzliche Informationen zu diesem Thema. Sie widmet sich weiter der Tabelle und stellt fest, dass die Ortsbezeichnung \enquote{Kopenhagen} nicht mit der Markierung in der Karte übereinstimmt. Außerdem ist sie erstaunt, wie hoch die Verbreitung eines bestimmten SNPs dort ist und würde gerne die Ursache dafür wissen. In der Hilfe zur Tabelle wurde sie auch über die Möglichkeit, Kommentare an den Daten vorzunehmen, aufgeklärt. Alice kommentiert sowohl die falschen Geokoordinaten als auch ihre Frage über die Verbreitung des SNPs, sodass sie später per Email über Antworten informiert wird. Nun kann Alice sich mit der vierten Visualisierung, dem Balkendiagramm, beschäftigen. Allerdings reagiert es auf keine Mausklicks und macht auch sonst nicht den Eindruck, die Daten akkurat darzustellen. Alice meldet die kaputte Visualisierung über die eingebaute Reporting-Funktion und schließt das Fenster, um sich den anderen drei Visualisierungskomponenten zuzuwenden.
 
-\chapter{Konzept}
-
+% ###################################################
 \section{Anforderungsanalyse}
 \label{section:anforderungsanalyse}
 
@@ -185,7 +172,31 @@ Bla bla
 	\item\textbf{Unaufdringlichkeit}: Das Hilfesystem soll den Benutzer nicht von seinen Aufgaben ablenken und nur auf Anfrage zum Einsatz kommen oder es soll selbständig erkennen, wenn der Benutzer Hilfe benötigt.
 \end{itemize}
 
-%### end of appendix
+% ###################################################
+\section{Grundlagen}
+\label{section:grundlagen}
+
+\subsection{Semantische Daten}
+\label{section:semantische_daten}
+
+% Grundlagen von RDF, RDFS, OWL. Kann ich mehr oder weniger aus dem Beleg abschreiben.
+
+\subsection{Informationsvisualisierung}
+\label{section:informationsvisualisierung}
+
+% Grundlagen von InfoVis und Beispiele
+
+\subsection{Software Support}
+\label{section:software_support}
+
+% Konzepte für Hilfe in Software: Karl Klammer, F1, Foren, Handbücher, ...
+
+
+% ###################################################
+\chapter{Konzeption}
+\label{chapter:konzeption}
+
+
 %#####################################################
 \printbibliography[title=Literaturverzeichnis]
 
